se agregaron los estilos al header

--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -11,51 +11,57 @@
         <nav>
             <div class="left">
                 <span class="nav-item home">
-                    <a href="#" class="nav-item_link item1">Lorem.</a>
+                    <a href="#" class="nav-item_link item1">
+                        <svg aria-hidden="true" focusable="false" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg" width="45" height="21" viewBox="0 0 45 21">
+                            <path d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z">
+                        </path></svg>
+                    </a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item2">Lorem.</a>
+                    <a href="#" class="nav-item_link item2">Live</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item3">Lorem.</a>
+                    <a href="#" class="nav-item_link item2">Push</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item4">Lorem.</a>
+                    <a href="#" class="nav-item_link item3">Note</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item5">Lorem.</a>
+                    <a href="#" class="nav-item_link item4">Link</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item6">Lorem.</a>
+                    <a href="#" class="nav-item_link item5">Shop</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item7">Lorem.</a>
+                    <a href="#" class="nav-item_link item6">Packs</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item8">Lorem.</a>
+                    <a href="#" class="nav-item_link item7">Help</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item9">Lorem.</a>
+                    <a href="#" class="nav-item_link item8">More +</a>
                 </span>
             </div>
 
             <div class="right">
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item1">Lorem.</a></span>
+                    <a href="#" class="nav-item_link item1">Try Live for free</a>
+                </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item2">Lorem.</a></span>
+                    <a href="#" class="nav-item_link item2">Log in or register</a>
+                </span>
             </div>
         </nav>
 
-        <div class="sub-nav left">
+        <div class="sub-nav">
             <span class="nav-item">
-                <a href="#" class="nav-item_link sub-nav_item">Lorem</a>
+                <a href="#" class="nav-item_link sub-nav_item">About</a>
             </span>
             <span class="nav-item">
-                <a href="#" class="nav-item_link sub-nav_item">Lorem</a>
+                <a href="#" class="nav-item_link sub-nav_item">Jobs</a>
             </span>
             <span class="nav-item">
-                <a href="#" class="nav-item_link sub-nav_item">Lorem</a>
+                <a href="#" class="nav-item_link sub-nav_item">Apprenticeships</a>
             </span>
         </div>
     </header>
