--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -12,7 +12,7 @@
             <div class="left">
                 <span class="nav-item home">
                     <a href="#" class="nav-item_link item1">
-                        <svg aria-hidden="true" focusable="false" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg" width="45" height="21" viewBox="0 0 45 21">
+                        <svg aria-hidden="true" focusable="false" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg" width="60" height="40" viewBox="0 0 45 21">
                             <path d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z">
                         </path></svg>
                     </a>
@@ -39,7 +39,7 @@
                     <a href="#" class="nav-item_link item7">Help</a>
                 </span>
                 <span class="nav-item">
-                    <a href="#" class="nav-item_link item8">More +</a>
+                    <a href="#" class="nav-item_link item8">More <span>+</span></a>
                 </span>
             </div>
 
