--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -53,17 +53,130 @@
             </div>
         </nav>
 
-        <div class="sub-nav">
-            <span class="nav-item">
-                <a href="#" class="nav-item_link sub-nav_item">About</a>
-            </span>
-            <span class="nav-item">
-                <a href="#" class="nav-item_link sub-nav_item">Jobs</a>
-            </span>
-            <span class="nav-item">
-                <a href="#" class="nav-item_link sub-nav_item">Apprenticeships</a>
-            </span>
+        <div class="sub-nav_container">
+            <div class="sub-nav">
+                <span class="nav-item">
+                    <a href="#" class="nav-item_link sub-nav_item">About</a>
+                </span>
+                <span class="nav-item">
+                    <a href="#" class="nav-item_link sub-nav_item">Jobs</a>
+                </span>
+                <span class="nav-item">
+                    <a href="#" class="nav-item_link sub-nav_item">Apprenticeships</a>
+                </span>
+            </div>
         </div>
     </header>
+
+    <main>
+        <section class="major-image_container">
+            <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" alt="" class="major-image">
+        </section>
+
+        <section class="first-section">
+            <article class="one">
+                <h2 class="title">
+                    We make <a href="#" class="tile-link">Live</a>, 
+                    <a href="#" class="tile-link">Push</a> 
+                    and <a href="#" class="tile-link">Link</a> 
+                    — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.
+                </h2>
+                <p>
+                    Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.
+                </p>
+            </article>
+
+            <div class="img_continer two-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="right-img">
+                <div class="color-div"></div>
+            </div>
+        </section>
+
+        <section class="two-section">
+            <article class="two">
+                <h2 class="title">
+                    Making music isn’t easy. It takes time, effort, and learning. But when you’re in the flow, it’s incredibly rewarding.
+                </h2>
+                <p>
+                    We feel the same way about making Ableton products. The driving force behind Ableton is our passion for what we make, and the people we make it for.
+                </p>
+                <video src="https://youtu.be/9SbnhgjeyXA"></video>
+                <p>Why Ableton - Juanpe Bolivar</p>
+            </article>
+        </section>
+
+        <section class="section-three">
+            <article class="three">
+                <h2 class="title">
+                    We are more than 350 people from 30 different countries divided between our headquarters in Berlin and our offices in Los Angeles and Tokyo.
+                </h2>
+                <p>
+                    Most of us are active musicians, producers, and DJs, and many of us use Live and Push every day. We come from a wide range of cultural and professional backgrounds. Some of us have PhDs, some are self-taught, and most of us are somewhere in between. What connects us is the shared belief that each of us has the skills and knowledge to contribute to something big: helping to shape the future of music culture.
+                </p>
+            </article>
+
+            <div class="img_continer three-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="right-img">
+                <div class="color-div"></div>
+            </div>
+        </section>
+
+        <section class="section-four">
+            <article class="four">
+                <h2 class="title">
+                    We believe it takes focus to create truly outstanding instruments. We only work on a few products and we strive to make them great.
+                </h2>
+                <p>
+                    Rather than having a one-size-fits-all process, we try to give our people what they need to work their magic and grow. We’ve learned that achieving the best results comes from building teams that are richly diverse, and thus able to explore problems from a wider set of perspectives. We don’t always agree with each other, but opinion and debate are valued and openly encouraged.
+                </p>
+            </article>
+
+            <div class="img_continer one-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="center-img">
+            </div>
+        </section>
+        <section class="section-">
+            <article class="five">
+                <h2 class="title">
+                    We’re passionate about what we do, but we’re equally passionate about improving who we are.
+                </h2>
+                <p>
+                    We work hard to foster an environment where people can grow both personally and professionally, and we strive to create a wealth of opportunities to learn from and with each other.
+                </p>
+                <p>
+                    Alongside an internal training program, employees are actively supported in acquiring new knowledge and skills, and coached on applying these in their daily work. In addition, staff-organized development and music salons are a chance to discuss new technologies, production techniques and best practices.
+                </p>
+            </article>
+
+            <div class="img_continer two-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
+                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="right-img">
+                <div class="color-div"></div>
+            </div>
+        </section>
+        <section class="section-six">
+            <article class="six">
+                <h2 class="title">
+                    We want our employees to love it here. Since we’re looking for exceptional talent from around the world, we will do everything we can to make your transition as easy as possible.
+                </h2>
+                <p>
+                    If you're joining us in Berlin, we'll help with relocation and paperwork. We’ll even provide you with free German or English lessons. Plus, working in Germany means you can expect comprehensive health insurance for you and your family, as well as generous maternity and paternity leave. Office hours are flexible, but it’s not all work; we have several company and team outings throughout the year as well as a variety of fun, informal small-group activities.
+                </p>
+            </article>
+
+            <div class="img_container two-img">
+                <img class="img-left" src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg">
+                <div class="card">
+                    <h2 class="title">
+                        We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
+                    </h2>
+                    <a href="#">See lastest jobs></a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
