add: estilos de los article, h2, p y pequeños cambios generales.

--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -70,7 +70,7 @@
 
     <main>
         <section class="major-image_container">
-            <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" alt="" class="major-image">
+            <img src="css/img/images.jpeg" alt="" class="major-image">
         </section>
 
         <section class="first-section">
@@ -87,8 +87,8 @@
             </article>
 
             <div class="img_continer two-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="right-img">
+                <img src="css/img/images.jpeg" class="left-img">
+                <img src="css/img/images.jpeg" class="right-img">
                 <div class="color-div"></div>
             </div>
         </section>
@@ -117,9 +117,9 @@
             </article>
 
             <div class="img_continer three-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="right-img">
+                <img src="css/img/images.jpeg" class="left-img">
+                <img src="css/img/images.jpeg" class="left-img">
+                <img src="css/img/images.jpeg" class="right-img">
                 <div class="color-div"></div>
             </div>
         </section>
@@ -135,7 +135,7 @@
             </article>
 
             <div class="img_continer one-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="center-img">
+                <img src="css/img/images.jpeg" class="center-img">
             </div>
         </section>
         <section class="section-">
@@ -152,8 +152,8 @@
             </article>
 
             <div class="img_continer two-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="left-img">
-                <img src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg" class="right-img">
+                <img src="css/img/images.jpeg" class="left-img">
+                <img src="css/img/images.jpeg" class="right-img">
                 <div class="color-div"></div>
             </div>
         </section>
@@ -168,7 +168,7 @@
             </article>
 
             <div class="img_container two-img">
-                <img class="img-left" src="css/img/example-button-speech-bubble-example-colorful-web-banner-illustration-vector.jpg">
+                <img class="img-left" src="css/img/images.jpeg">
                 <div class="card">
                     <h2 class="title">
                         We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
