--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -70,7 +70,7 @@
 
     <main>
         <section class="major-image_container">
-            <img src="css/img/images.jpeg" alt="" class="major-image">
+            <img src="css/img/images.jpeg" alt="" class="major-image center-img">
         </section>
 
         <section class="first-section">
@@ -85,11 +85,12 @@
                     Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.
                 </p>
             </article>
-
-            <div class="img_continer two-img">
-                <img src="css/img/images.jpeg" class="left-img">
-                <img src="css/img/images.jpeg" class="right-img">
-                <div class="color-div"></div>
+            <div class="images-section">
+                <div class="img_container two-img">
+                    <img src="css/img/images.jpeg" class="left-img large-size">
+                    <img src="css/img/images.jpeg" class="right-img medium-size">
+                    <div class="color-div"></div>
+                </div>
             </div>
         </section>
 
@@ -116,11 +117,15 @@
                 </p>
             </article>
 
-            <div class="img_continer three-img">
-                <img src="css/img/images.jpeg" class="left-img">
-                <img src="css/img/images.jpeg" class="left-img">
-                <img src="css/img/images.jpeg" class="right-img">
-                <div class="color-div"></div>
+            <div class="images-section">
+                <div class="img_container three-img">
+                    <div class="left-img">
+                        <img src="css/img/images.jpeg" class="medium-size">
+                        <img src="css/img/images.jpeg" class="medium-size">
+                    </div>
+                    <img src="css/img/images.jpeg" class="right-img large-size" >
+                    <div class="color-div"></div>
+                </div>
             </div>
         </section>
 
@@ -134,11 +139,11 @@
                 </p>
             </article>
 
-            <div class="img_continer one-img">
+            <div class="img_container one-img">
                 <img src="css/img/images.jpeg" class="center-img">
             </div>
         </section>
-        <section class="section-">
+        <section class="section-five">
             <article class="five">
                 <h2 class="title">
                     We’re passionate about what we do, but we’re equally passionate about improving who we are.
@@ -151,10 +156,12 @@
                 </p>
             </article>
 
-            <div class="img_continer two-img">
-                <img src="css/img/images.jpeg" class="left-img">
-                <img src="css/img/images.jpeg" class="right-img">
-                <div class="color-div"></div>
+            <div class="images-section">
+                <div class="img_container two-img">
+                    <img src="css/img/images.jpeg" class="left-img medium-size">
+                    <img src="css/img/images.jpeg" class="right-img large-size">
+                    <div class="color-div"></div>
+                </div>
             </div>
         </section>
         <section class="section-six">
@@ -168,12 +175,14 @@
             </article>
 
             <div class="img_container two-img">
-                <img class="img-left" src="css/img/images.jpeg">
+                <img class="img-left xl-image" src="css/img/images.jpeg">
                 <div class="card">
-                    <h2 class="title">
-                        We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
-                    </h2>
-                    <a href="#">See lastest jobs></a>
+                    <div class="card-content">
+                        <h2 class="title">
+                            We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
+                        </h2>
+                        <a href="#">See lastest jobs></a>
+                    </div>
                 </div>
             </div>
         </section>
