Agregado: Estructura HTML del Footer.

--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -181,11 +181,94 @@
                         <h2 class="title">
                             We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
                         </h2>
-                        <a href="#">See lastest jobs></a>
+                        <a href="#">See lastest jobs ></a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <h2>Ableton</h2>
+        <section class="footer-content">
+            <div class="glossary one">
+                <div class="one-content">
+                    <a href="#">Register Live or Push ></a>
+                    <a href="#">About Ableton ></a>
+                    <a href="#">Jobs ></a>
+                    <div>
+                        <a href="">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="one-content">
+                    <h3>community</h3>
+                    <div>
+                    <a href="">Find Ableton User Groups ></a>
+                    <a href="">Find Certified Training ></a>
+                    <a href="">Become a Certified Trainer ></a>
+                    </div>
+                </div>
+            </div>
+            <div class="glossary two">
+                <div class="two-content">
+                    <h3>Education</h3>
+                    <div>
+                        <a href="">Offers for students and teachers ></a>
+                        <a href="">Ableton for the Classroom ></a>
+                        <a href="">Ableton for Colleges and Universities ></a>
+                    </div>
+                </div>
+                <div class="two-content">
+                    <h3>Language and Location</h3>
+                    <select name="language" id="language">
+
+                    </select>
+                    <select name="location" id="location">
+
+                    </select>
+                </div>
+            </div>
+            <div class="sign">
+                <h3>Sign up to our newsletter</h3>
+                <p>
+                    Enter your email address to stay up to date with the latest offers, tutorials, downloads, surveys and more.
+                </p>
+                <form>
+                    <input type="email" id="email-input">
+                    <button id="btn">Sign up</button>
+                </form>
+            </div>
+        </section>
+        <div class="footer-info_a">
+            <div>
+                <a href="">Contact Us</a>
+                <a href="">Press Resources</a>
+                <a href="">Legal Info</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Cookie Settings</a>
+                <a href="">Imprint</a>
+            </div>
+            <div class="footer-info_b">
+                <span>Made in Berlin</span>
+                <span>
+                    <svg aria-hidden="true" focusable="false" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg" width="45" height="21" viewBox="0 0 45 21">
+                        <path d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z"></path>
+                    </svg>
+                </span>
+            </div>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/4789d8ae0b.js" crossorigin="anonymous"></script>
 </body>
 </html>
