se agregó estilos al footer y al h1

--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn more about Ableton - maker of Live and Push | Ableton</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
             <div class="left">
                 <span class="nav-item home">
                     <a href="#" class="nav-item_link item1">
-                        <svg aria-hidden="true" focusable="false" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg" width="60" height="40" viewBox="0 0 45 21">
-                            <path d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z">
-                        </path></svg>
+                        <svg aria-hidden="true" focusable="false" class="main-nav__logo__image"
+                            xmlns="http://www.w3.org/2000/svg" width="60" height="40" viewBox="0 0 45 21">
+                            <path
+                                d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z">
+                            </path>
+                        </svg>
                     </a>
                 </span>
                 <span class="nav-item">
@@ -76,13 +81,15 @@
         <section class="first-section">
             <article class="one">
                 <h2 class="title">
-                    We make <a href="#" class="tile-link">Live</a>, 
-                    <a href="#" class="tile-link">Push</a> 
-                    and <a href="#" class="tile-link">Link</a> 
-                    — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.
+                    We make <a href="#" class="tile-link">Live</a>,
+                    <a href="#" class="tile-link">Push</a>
+                    and <a href="#" class="tile-link">Link</a>
+                    — unique software and hardware for music creation and performance. With these products, our
+                    community of users creates amazing things.
                 </h2>
                 <p>
-                    Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.
+                    Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by
+                    a community of dedicated musicians, sound designers, and artists from across the world.
                 </p>
             </article>
             <div class="images-section">
@@ -97,10 +104,12 @@
         <section class="two-section">
             <article class="two">
                 <h2 class="title">
-                    Making music isn’t easy. It takes time, effort, and learning. But when you’re in the flow, it’s incredibly rewarding.
+                    Making music isn’t easy. It takes time, effort, and learning. But when you’re in the flow, it’s
+                    incredibly rewarding.
                 </h2>
                 <p>
-                    We feel the same way about making Ableton products. The driving force behind Ableton is our passion for what we make, and the people we make it for.
+                    We feel the same way about making Ableton products. The driving force behind Ableton is our passion
+                    for what we make, and the people we make it for.
                 </p>
                 <video src="https://youtu.be/9SbnhgjeyXA"></video>
                 <p>Why Ableton - Juanpe Bolivar</p>
@@ -110,10 +119,15 @@
         <section class="section-three">
             <article class="three">
                 <h2 class="title">
-                    We are more than 350 people from 30 different countries divided between our headquarters in Berlin and our offices in Los Angeles and Tokyo.
+                    We are more than 350 people from 30 different countries divided between our headquarters in Berlin
+                    and our offices in Los Angeles and Tokyo.
                 </h2>
                 <p>
-                    Most of us are active musicians, producers, and DJs, and many of us use Live and Push every day. We come from a wide range of cultural and professional backgrounds. Some of us have PhDs, some are self-taught, and most of us are somewhere in between. What connects us is the shared belief that each of us has the skills and knowledge to contribute to something big: helping to shape the future of music culture.
+                    Most of us are active musicians, producers, and DJs, and many of us use Live and Push every day. We
+                    come from a wide range of cultural and professional backgrounds. Some of us have PhDs, some are
+                    self-taught, and most of us are somewhere in between. What connects us is the shared belief that
+                    each of us has the skills and knowledge to contribute to something big: helping to shape the future
+                    of music culture.
                 </p>
             </article>
 
@@ -123,7 +137,7 @@
                         <img src="css/img/images.jpeg" class="medium-size">
                         <img src="css/img/images.jpeg" class="medium-size">
                     </div>
-                    <img src="css/img/images.jpeg" class="right-img large-size" >
+                    <img src="css/img/images.jpeg" class="right-img large-size">
                     <div class="color-div"></div>
                 </div>
             </div>
@@ -132,10 +146,14 @@
         <section class="section-four">
             <article class="four">
                 <h2 class="title">
-                    We believe it takes focus to create truly outstanding instruments. We only work on a few products and we strive to make them great.
+                    We believe it takes focus to create truly outstanding instruments. We only work on a few products
+                    and we strive to make them great.
                 </h2>
                 <p>
-                    Rather than having a one-size-fits-all process, we try to give our people what they need to work their magic and grow. We’ve learned that achieving the best results comes from building teams that are richly diverse, and thus able to explore problems from a wider set of perspectives. We don’t always agree with each other, but opinion and debate are valued and openly encouraged.
+                    Rather than having a one-size-fits-all process, we try to give our people what they need to work
+                    their magic and grow. We’ve learned that achieving the best results comes from building teams that
+                    are richly diverse, and thus able to explore problems from a wider set of perspectives. We don’t
+                    always agree with each other, but opinion and debate are valued and openly encouraged.
                 </p>
             </article>
 
@@ -149,10 +167,14 @@
                     We’re passionate about what we do, but we’re equally passionate about improving who we are.
                 </h2>
                 <p>
-                    We work hard to foster an environment where people can grow both personally and professionally, and we strive to create a wealth of opportunities to learn from and with each other.
+                    We work hard to foster an environment where people can grow both personally and professionally, and
+                    we strive to create a wealth of opportunities to learn from and with each other.
                 </p>
                 <p>
-                    Alongside an internal training program, employees are actively supported in acquiring new knowledge and skills, and coached on applying these in their daily work. In addition, staff-organized development and music salons are a chance to discuss new technologies, production techniques and best practices.
+                    Alongside an internal training program, employees are actively supported in acquiring new knowledge
+                    and skills, and coached on applying these in their daily work. In addition, staff-organized
+                    development and music salons are a chance to discuss new technologies, production techniques and
+                    best practices.
                 </p>
             </article>
 
@@ -167,10 +189,15 @@
         <section class="section-six">
             <article class="six">
                 <h2 class="title">
-                    We want our employees to love it here. Since we’re looking for exceptional talent from around the world, we will do everything we can to make your transition as easy as possible.
+                    We want our employees to love it here. Since we’re looking for exceptional talent from around the
+                    world, we will do everything we can to make your transition as easy as possible.
                 </h2>
                 <p>
-                    If you're joining us in Berlin, we'll help with relocation and paperwork. We’ll even provide you with free German or English lessons. Plus, working in Germany means you can expect comprehensive health insurance for you and your family, as well as generous maternity and paternity leave. Office hours are flexible, but it’s not all work; we have several company and team outings throughout the year as well as a variety of fun, informal small-group activities.
+                    If you're joining us in Berlin, we'll help with relocation and paperwork. We’ll even provide you
+                    with free German or English lessons. Plus, working in Germany means you can expect comprehensive
+                    health insurance for you and your family, as well as generous maternity and paternity leave. Office
+                    hours are flexible, but it’s not all work; we have several company and team outings throughout the
+                    year as well as a variety of fun, informal small-group activities.
                 </p>
             </article>
 
@@ -179,7 +206,8 @@
                 <div class="card">
                     <div class="card-content">
                         <h2 class="title">
-                            We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
+                            We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d
+                            like to be a part of it, please join us.
                         </h2>
                         <a href="#">See lastest jobs ></a>
                     </div>
@@ -189,86 +217,91 @@
     </main>
 
     <footer>
-        <h2>Ableton</h2>
-        <section class="footer-content">
-            <div class="glossary one">
-                <div class="one-content">
-                    <a href="#">Register Live or Push ></a>
-                    <a href="#">About Ableton ></a>
-                    <a href="#">Jobs ></a>
-                    <div>
-                        <a href="">
-                            <i class="fa-brands fa-facebook"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-youtube"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
+        <div class="footer">
+            <img src="css/img/ableton-wordmark.c025e3df71b3.svg" alt="ableton-wordmark">
+            <section class="footer-content">
+                <div class="glossary one">
+                    <div class="one-content">
+                        <a href="#">Register Live or Push ></a>
+                        <a href="#">About Ableton ></a>
+                        <a href="#">Jobs ></a>
+                        <div class="social-icons">
+                            <a href="">
+                                <ion-icon class="facebook" name="logo-facebook"></ion-icon></a>
+                            <a href="">
+                                <ion-icon class="twitter" name="logo-twitter"></ion-icon></a>
+                            <a href="">
+                                <ion-icon class="youtube" name="logo-youtube"></ion-icon></a>
+                            <a href="">
+                                <ion-icon class="instagram" name="logo-instagram"></ion-icon></a>
+                        </div>
+                    </div>
+                    <div class="one-content">
+                        <h3>Community</h3>
+                        <a href="">Find Ableton User Groups ></a>
+                        <a href="">Find Certified Training ></a>
+                        <a href="">Become a Certified Trainer ></a>
                     </div>
                 </div>
-                <div class="one-content">
-                    <h3>community</h3>
-                    <div>
-                    <a href="">Find Ableton User Groups ></a>
-                    <a href="">Find Certified Training ></a>
-                    <a href="">Become a Certified Trainer ></a>
-                    </div>
-                </div>
-            </div>
-            <div class="glossary two">
-                <div class="two-content">
-                    <h3>Education</h3>
-                    <div>
+                <div class="glossary two">
+                    <div class="two-content">
+                        <h3>Education</h3>
                         <a href="">Offers for students and teachers ></a>
                         <a href="">Ableton for the Classroom ></a>
                         <a href="">Ableton for Colleges and Universities ></a>
                     </div>
+                    <div class="two-content">
+                        <h3>Language and Location</h3>
+                        <div class="container-select">
+                            <select name="language" id="language">
+                                <option value="english">English</option>
+                            </select>
+                            <select name="location" id="location">
+                                <option value="default">Please choose</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
-                <div class="two-content">
-                    <h3>Language and Location</h3>
-                    <select name="language" id="language">
-
-                    </select>
-                    <select name="location" id="location">
-
-                    </select>
+                <div class="sign">
+                    <h3>Sign up to our newsletter</h3>
+                    <p>
+                        Enter your email address to stay up to date with the latest offers, tutorials, downloads,
+                        surveys and more.
+                    </p>
+                    <form>
+                        <input type="email" id="email-input" placeholder="  Email Address">
+                        <button id="btn">Sign up</button>
+                    </form>
                 </div>
-            </div>
-            <div class="sign">
-                <h3>Sign up to our newsletter</h3>
-                <p>
-                    Enter your email address to stay up to date with the latest offers, tutorials, downloads, surveys and more.
-                </p>
-                <form>
-                    <input type="email" id="email-input">
-                    <button id="btn">Sign up</button>
-                </form>
-            </div>
-        </section>
-        <div class="footer-info_a">
-            <div>
-                <a href="">Contact Us</a>
-                <a href="">Press Resources</a>
-                <a href="">Legal Info</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Cookie Settings</a>
-                <a href="">Imprint</a>
-            </div>
-            <div class="footer-info_b">
-                <span>Made in Berlin</span>
-                <span>
-                    <svg aria-hidden="true" focusable="false" class="main-nav__logo__image" xmlns="http://www.w3.org/2000/svg" width="45" height="21" viewBox="0 0 45 21">
-                        <path d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z"></path>
-                    </svg>
-                </span>
-            </div>
+            </section>
+
+            <section class="footer-info_container">
+                <div class="footer-info_a">
+                    <a href="">Contact Us</a>
+                    <a href="">Press Resources</a>
+                    <a href="">Legal Info</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Cookie Settings</a>
+                    <a href="">Imprint</a>
+                </div>
+    
+                <div class="footer-info_b">
+                    <span>Made in Berlin</span>
+                    <span>
+                        <svg aria-hidden="true" focusable="false" class="main-nav__logo__image"
+                            xmlns="http://www.w3.org/2000/svg" width="45" height="21" viewBox="0 0 45 21">
+                            <path
+                                d="M0 0h3v21H0zM6 0h3v21H6zM12 0h3v21h-3zM18 0h3v21h-3zM24 18h21v3H24zM24 12h21v3H24zM24 6h21v3H24zM24 0h21v3H24z">
+                            </path>
+                        </svg>
+                    </span>
+                </div>
+            </section>
         </div>
     </footer>
-    <script src="https://kit.fontawesome.com/4789d8ae0b.js" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/4789d8ae0b.js" crossorigin="anonymous"></script> -->
 </body>
+
 </html>
