--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -343,6 +343,7 @@
         </section>
       </div>
     </footer>
+    <script src="js/main.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
